@@ -1,7 +1,10 @@
 v 1.28.4
 + fixed bug in primes() routine
 + smallmpqs now prints its factors to the logfile like it should
-+ 8x med prime trial division now enabled for all versions
++ disabled 8x med prime trial division due to windows x64 bug
++ ported rho.c entirely to gmp
+	removed my homegrown monty code from the project
++ main now returns 0 instead of 1 (thanks yoyo!)
 
 v 1.28.3
 + robustified nfs data file parsing a bit
